# LitRadar

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.config/: nextest.toml
.github/workflows/: backend.yaml  docker.yaml  docker.yml  frontend.yaml  mcp.yaml  npm-publish.yml  rust.yaml  test-diagnostics.yaml
app/: Dockerfile  README.md  components.json  next.config.ts  package.json  playwright.config.tsx  playwright.full-stack.config.tsx  pnpm-lock.yaml  vitest.config.tsx
app/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  providers.tsx
app/components/: announcements-dialog.tsx
app/lib/: admin-center.tsx  api-contract.tsx  api.ts  api.tsx  area-labels.tsx  article-filters.tsx  auth-context.tsx  auth-error.tsx  auth-session.tsx  browser-storage.tsx  citation.tsx  client-api.tsx  client-logger.tsx  clipboard.tsx  format.tsx  fts-highlight.tsx  hooks.tsx  selected-database.tsx  settings-center.tsx  workspace-view.tsx
app/scripts/: check-generated-api.mjs
app/tests/: account-settings.test.tsx  admin-announcements.test.tsx  admin-center.test.tsx  admin-mutations.test.tsx  admin-users.test.tsx  announcements-dialog.test.tsx  api-client.test.tsx  api-contract.test.tsx  api-facade.test.tsx  api-query-flows.test.tsx  article-dialog.test.tsx  auth-context.test.tsx  citation.test.tsx  client-observability.test.tsx  confirm-dialog.test.tsx  default-chrome-theme.test.tsx  favorite-checks.test.tsx  favorite-flow.test.tsx  feature-boundaries.test.tsx  font-assets.test.tsx  fts-highlight.test.tsx  login-page.test.tsx  provider-configuration.test.tsx  render.tsx  results-list.test.tsx  route-boundaries.test.tsx  runtime-secret-settings.test.tsx  search-filter-ui.test.tsx  selected-database.test.tsx  settings-admin-boundaries.test.tsx  settings-center.test.tsx  setup.tsx  tracking-page.test.tsx  tracking-polling.test.tsx  user-menu.test.tsx  weekly-updates.test.tsx  workspace-shell.test.tsx
crates/litradar/: Cargo.toml
crates/litradar-api/: Cargo.toml
crates/litradar-api/src/: article_access.rs  config.rs  http_observability.rs  lib.rs  main.rs  mcp.rs  observability.rs  openapi.rs  response.rs  state.rs  test_support.rs
crates/litradar-api/src/routes/: admin.rs  announcements.rs  auth.rs  cnki.rs  favorites.rs  health.rs  index.rs  mod.rs  tracking.rs
crates/litradar-api/src/tests/: contract_scenarios.rs  weekly.rs
crates/litradar-auth/: Cargo.toml
crates/litradar-auth/src/: lib.rs  service.rs  session.rs  token.rs
crates/litradar-cli/: Cargo.toml
crates/litradar-cli/src/: lib.rs
crates/litradar-index/: Cargo.toml
crates/litradar-index/src/: changes.rs  cnki.rs  control.rs  identity.rs  lib.rs  live.rs  manifest.rs  schema.rs  scholarly.rs  sqlite_pressure.rs  stats.rs  transforms.rs  worker_protocol.rs  writer_gate.rs
crates/litradar-sources/: Cargo.toml
crates/litradar-sources/src/: cnki.rs  lib.rs  providers.rs  scholarly.rs  zjlib_cnki.rs
crates/litradar-sources/src/zjlib_cnki/tests/: live_transport.rs
crates/litradar-storage/: Cargo.toml
crates/litradar-storage/src/: announcements.rs  article_authors.rs  auth.rs  backup.rs  cnki.rs  config.rs  lib.rs  meta.rs  migrations.rs  secrets.rs  sqlite.rs
crates/litradar-storage/src/business/: favorites.rs  mod.rs  notifications.rs  runtime_settings.rs  scheduled_tasks.rs  shared.rs
crates/litradar-storage/src/index/: articles.rs  fulltext.rs  metadata.rs  mod.rs  shared.rs  test_support.rs  weekly.rs
crates/litradar-storage/tests/: auth_bootstrap.rs  migrations.rs
crates/litradar-worker/: Cargo.toml
crates/litradar-worker/src/: ai.rs  pushplus.rs  retry.rs  scheduler.rs
crates/litradar-worker/src/delivery/: candidates.rs  folder.rs  manifests.rs  mod.rs  notify.rs  orchestration.rs  state.rs
crates/litradar/examples/: full_stack_fixture.rs
crates/litradar/src/: config.rs  lib.rs  main.rs  observability.rs  openapi.rs  runtime.rs
crates/litradar/tests/: cli.rs  service.rs
crates/litradar/tests/support/: mod.rs
crates/ps-api/: Cargo.toml
crates/ps-api/src/: config.rs  lib.rs  main.rs  mcp.rs  observability.rs  openapi.rs  response.rs  state.rs  test_support.rs
crates/ps-api/src/routes/: admin.rs  announcements.rs  auth.rs  cnki.rs  favorites.rs  health.rs  index.rs  mod.rs  tracking.rs
crates/ps-auth/: Cargo.toml
crates/ps-auth/src/: lib.rs  password.rs  service.rs  session.rs
crates/ps-cli/: Cargo.toml
crates/ps-cli/src/: lib.rs  main.rs
crates/ps-index/: Cargo.toml
crates/ps-index/src/: cnki.rs  lib.rs  live.rs  manifest.rs  schema.rs  scholarly.rs  stats.rs  transforms.rs
crates/ps-storage/: Cargo.toml
crates/ps-storage/src/: announcements.rs  auth.rs  backup.rs  business.rs  cnki.rs  config.rs  index.rs  lib.rs  migrations.rs  secrets.rs  sqlite.rs
crates/ps-storage/src/business/: admin.rs  favorites.rs  mod.rs  notifications.rs  runtime_settings.rs  scheduled_tasks.rs
crates/ps-storage/src/index/: articles.rs  fulltext.rs  mod.rs  test_support.rs  weekly.rs
crates/ps-storage/tests/: auth_bootstrap.rs  migrations.rs
crates/ps-worker/: Cargo.toml
crates/ps-worker/src/: ai.rs  delivery.rs  lib.rs  pushplus.rs  retry.rs  scheduler.rs
crates/ps-worker/src/delivery/: candidates.rs  folder.rs  manifests.rs  mod.rs  orchestration.rs  state.rs
docs/: README.md  api.md  architecture.md  backup.md  browzine_api.md  cnki_oversea_api.md  database.md  development.md  docker.md  notify.md  rust_migration_contract.md  scholarly_api.md  security.md  testing.md  weipu_api.md
mcp/: README.md  package-lock.json  package.json  tsconfig.json
paper_scanner/: __init__.py
scripts/: container-smoke.mjs  profile_docker_memory.ps1  profile_logging.ps1  test.mjs
tests/: test_article_access.py  test_article_fulltext_redirect.py  test_auth_cookie_session.py  test_cnki_session_routes.py  test_favorites_export_auth.py  test_index_stats.py  test_scholarly_limits.py  test_scholarly_update.py  test_semantic_scholar_enrichment.py  test_weekly_updates.py  test_zjlib_cnki_client.py
(+317 files in other folders)
