[workspace]
members = ["crates/ps-api", "crates/ps-auth", "crates/ps-domain", "crates/ps-storage"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8.9"
hex = "0.4.3"
pbkdf2 = "0.13.0"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors"] }
