[workspace]
members = [
    "crates/litradar",
    "crates/litradar-api",
    "crates/litradar-auth",
    "crates/litradar-cli",
    "crates/litradar-domain",
    "crates/litradar-index",
    "crates/litradar-recommend",
    "crates/litradar-sources",
    "crates/litradar-storage",
    "crates/litradar-worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.96"

[workspace.dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
hex = "0.4.3"
pbkdf2 = "0.13.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["backup", "bundled", "load_extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
zeroize = "1.9.0"
