[project]
name = "ps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "httpx[socks]>=0.28.1",
    "openai>=2.17.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "playwright>=1.57.0",
    "ruff>=0.14.6",
]

[project.scripts]
index = "paper_scanner.index:main"
api = "paper_scanner.api:main"
notify = "paper_scanner.notify:main"
push = "paper_scanner.push:main"

[tool.setuptools.packages.find]
include = ["paper_scanner*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.mypy]
disable_error_code = ["import-untyped"]
