[package]
name = "litradar-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
litradar-domain = { path = "../litradar-domain" }
litradar-storage = { path = "../litradar-storage" }
pbkdf2.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true

[dev-dependencies]
tempfile.workspace = true
