[package]
name = "litradar-index"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
litradar-domain = { path = "../litradar-domain" }
litradar-sources = { path = "../litradar-sources" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
