[package]
name = "litradar-sources"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
litradar-domain = { path = "../litradar-domain" }
litradar-provider = { path = "../litradar-provider" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
