[package]
name = "litradar-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
litradar-domain = { path = "../litradar-domain" }
litradar-recommend = { path = "../litradar-recommend" }
litradar-storage = { path = "../litradar-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
