[package]
name = "litradar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
litradar-api = { path = "../litradar-api" }
litradar-cli = { path = "../litradar-cli" }
litradar-storage = { path = "../litradar-storage" }
litradar-worker = { path = "../litradar-worker" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
litradar-auth = { path = "../litradar-auth" }
litradar-domain = { path = "../litradar-domain" }
litradar-index = { path = "../litradar-index" }
tempfile.workspace = true
