[package]
name = "ps-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
ps-auth = { path = "../ps-auth" }
ps-domain = { path = "../ps-domain" }
ps-storage = { path = "../ps-storage" }
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
tower.workspace = true
