[package]
name = "ps-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
default-run = "ps-api"

[dependencies]
axum.workspace = true
ps-auth = { path = "../ps-auth" }
ps-domain = { path = "../ps-domain" }
ps-sources = { path = "../ps-sources" }
ps-storage = { path = "../ps-storage" }
ps-worker = { path = "../ps-worker" }
rmcp = { version = "2.1.0", features = ["transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
