[package]
name = "ps-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
default-run = "ps-cli"

[dependencies]
ps-index = { path = "../ps-index" }
ps-storage = { path = "../ps-storage" }
ps-worker = { path = "../ps-worker" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
