[package]
name = "ps-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
ps-auth = { path = "../ps-auth" }
ps-domain = { path = "../ps-domain" }
ps-index = { path = "../ps-index" }
ps-storage = { path = "../ps-storage" }
ps-worker = { path = "../ps-worker" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
