[package]
name = "ps-index"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
ps-domain = { path = "../ps-domain" }
ps-sources = { path = "../ps-sources" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
