[package]
name = "ps-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
ps-domain = { path = "../ps-domain" }
ps-recommend = { path = "../ps-recommend" }
ps-storage = { path = "../ps-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
